@@ -1,3 +1,15 @@
+2012-05-09  Filip Pizlo  <fpizlo@apple.com>
+
+        It should be possible to get useful debug logging from the JIT memory allocator
+        https://bugs.webkit.org/show_bug.cgi?id=86042
+
+        Reviewed by Geoff Garen.
+
+        * wtf/MetaAllocator.cpp:
+        (WTF::MetaAllocator::findAndRemoveFreeSpace):
+        (WTF::MetaAllocator::addFreeSpace):
+        (WTF::MetaAllocator::dumpProfile):
+
 2012-05-08  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r116440.
